--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <html>
     <head></head>
     <body>
-      <p style="color: #333; font-size: 30px; font-weight: 700;">This is a test project.</p>
+      <p style="color: #333 !important; font-size: 30px !important; font-weight: 700 !important;">This is a test project.</p>
     </body>
   </html>
