--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head></head>
     <body>
-      <p style="color: #333 !important; font-size: 30px !important; font-weight: 700 !important;">This is a test project.</p>
+      <p>This is a test project.</p>
       <p>King kong on a whole another level.</p>
     </body>
   </html>
